# madonna

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .tag.toml  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: CI.yml
api/: version.html
contributing/: code_of_conduct.html  contributing.html
docs/: index.md
docs/api/: version.md
docs/contributing/: code_of_conduct.md  contributing.md
madonna/: __init__.py  madonna.py  py.typed  version.py
search/: search_index.json
src/madonna/: __init__.py  version.py
tests/: test_obvious.py  test_version.py
