[metadata]
name = madonna
version = 0.1.0
description = Python semver parsing library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FollowTheProcess/madonna
author = Tom Fleet
author_email = tomfleet2018@gmail.com
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://FollowTheProcess.github.io/madonna/
    Source = https://github.com/FollowTheProcess/madonna
test_suite = tests

[options]
packages = find:
install_requires =
    pydantic>=1.8.2
python_requires = >=3.7
include_package_data = true
zip_safe = False

[options.extras_require]
cov =
    coverage-badge>=1.0.1
    coverage[toml]>=5.5
dev =
    black>=21.6b0
    build>=0.5.1
    bump2version>=1.0.1
    coverage-badge>=1.0.1
    flake8>=3.9.2
    isort>=5.9.1
    mkdocs>=1.2.0
    mkdocs-material>=7.1.9
    mypy>=0.902
    nox>=2021.10.1
    pytest>=6.2.4
    pytest-cov>=2.12.1
docs =
    mkdocs>=1.2.0
    mkdocs-material>=7.1.9
lint =
    black>=21.6b0
    flake8>=3.9.2
    isort>=5.9.1
    mypy>=0.902
test =
    coverage[toml]>=5.5
    pytest>=6.2.4
    pytest-cov>=2.12.1

[options.package_data]
typed = madonna/py.typed

[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    venv/,
    .venv/,
    docs,
    site,
    .nox,
    *.egg,
    *.egg-info,
    build,
    dist
max-complexity = 15
max-line-length = 88
extend-ignore =
    E203, # Black compatability: whitespace before :
    W503, # Black compatability: line break before binary operator

[mypy]
files = madonna/**/*.py, noxfile.py
ignore_missing_imports = True
strict = True
disallow_untyped_decorators = False
pretty = True
plugins = pydantic.mypy

[mypy.tests.*]
ignore_errors =True
